fixed issue where author image was off center on small screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,4 +373,7 @@ footer p{
     .social-media-top i {
         font-size: 5vw;
     }
+    .author-image {
+        padding: 0 vw;
+    }
 }
